--- a/mainCSS2.css
+++ b/mainCSS2.css
@@ -12,7 +12,7 @@ video {
 }
 
 h1 {
-    width: 100vw;
+    width: 100%;
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 400;
@@ -71,7 +71,7 @@ h2 {
 }
 
 #time {
-    width: 100vw;
+    width: 100%;
     height: max-content;
     margin: 0%;
     text-align: center;
@@ -82,7 +82,7 @@ h2 {
 }
 
 #container {
-    width: 100vw;
+    width: 100%;
     display: grid;
     grid-template-areas: 'heading' 'video' 'info';
     row-gap: 10%;
@@ -92,7 +92,7 @@ h2 {
 }
 
 #whoIsThis {
-    max-width: 100vw;
+    max-width: 100%;
     display: grid;
     justify-items: center;
     background-color: #464646;
