--- a/Recruiter/mobileCSS.css
+++ b/Recruiter/mobileCSS.css
@@ -76,13 +76,21 @@ hr {
     border-radius: 50%;
 }
 
-#viewTicTacToe {
+#viewTicTacToe,
+#viewLeisure {
     display: block;
     margin: 3vw auto 0vw auto;
     padding: 2vw 10vw;
-    background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.5)), url('TicTacToe.jpg');
     background-size: contain;
     background-repeat: no-repeat center;
+}
+
+#viewTicTacToe {
+    background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.5)), url('TicTacToe.jpg');
+}
+
+#viewLeisure {
+    background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.5)), url('LeisureActiviteas.png');
 }
 
 @media screen and (orientation: portrait) {
