--- a/Recruiter/recCSS.css
+++ b/Recruiter/recCSS.css
@@ -68,7 +68,7 @@ li a {
     width: 100%;
     max-height: 100%;
     display: block;
-    padding: 1.2vw 0 1.2vw 0;
+    padding: 1.2vw 0;
     font-size: 1.2vw;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 100;
@@ -158,4 +158,13 @@ hr {
 
 #viewLeisure:hover {
     background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.5)), url('LeisureActiviteas.png');
+}
+
+#projects {
+    text-align: start;
+}
+
+#projects p {
+    background-color: #fdf4dd;
+    padding: 8vw 10vw;
 }
