--- a/Recruiter/mobileCSS.css
+++ b/Recruiter/mobileCSS.css
@@ -77,6 +77,7 @@ hr {
 }
 
 #viewTicTacToe,
+#viewConverter,
 #viewLeisure,
 #viewPortfolio,
 #view2DGame {
@@ -158,6 +159,7 @@ hr {
     }
 
     #viewTicTacToe,
+    #viewConverter,
     #viewLeisure,
     #viewPortfolio,
     #view2DGame {
@@ -220,6 +222,7 @@ hr {
     }
 
     #viewTicTacToe,
+    #viewConverter,
     #viewLeisure,
     #viewPortfolio,
     #view2DGame {
