--- a/Recruiter/mobileCSS.css
+++ b/Recruiter/mobileCSS.css
@@ -102,6 +102,8 @@ hr {
 #projects p {
     background-color: #fdf4dd;
     padding: 8vw 10vw;
+    border-radius: 2vw;
+    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 #toGame {
@@ -116,6 +118,12 @@ hr {
 #p4,
 #p5 {
     display: none;
+}
+
+footer {
+    width: 100%;
+    height: 30vh;
+    background-color: #464646;
 }
 
 @media screen and (orientation: portrait) {
@@ -249,7 +257,7 @@ hr {
 
 
 #showProjects {
-    padding: 0.5vw;
+    padding: 0.7vw;
 }
 
 #resumeImg {
@@ -258,6 +266,8 @@ hr {
 }
 
 #resumeHover {
+    max-width: max-content;
+    max-height: max-content;
     margin: 0 auto;
-    padding: 3vw 0 5vw 0;
+    padding: 3vw 0 5vw;
 }
