--- a/Recruiter/Image_sources/compCSS.css
+++ b/Recruiter/Image_sources/compCSS.css
@@ -21,6 +21,7 @@ h3 {
     margin: auto;
     padding: 2vw;
     font-size: 1vw;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 100;
 }
 
