--- a/Recruiter/Image_sources/mobileCSS.css
+++ b/Recruiter/Image_sources/mobileCSS.css
@@ -20,6 +20,7 @@ h3 {
     margin: auto;
     padding: 5vw;
     font-size: 2.5vw;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 100;
 }
 
