--- a/Recruiter/TicTacToe_project/laptopCSS.css
+++ b/Recruiter/TicTacToe_project/laptopCSS.css
@@ -6,7 +6,7 @@ body {
 h2 {
     width: 100%;
     height: 2vw;
-    background-color: #5e5e5e;
+    background-color: #464646;
     margin: 0;
     padding: 1vw 0vw;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
