--- a/Recruiter/Resume/resumeCSSPhone.css
+++ b/Recruiter/Resume/resumeCSSPhone.css
@@ -15,17 +15,17 @@ button:hover {
     background-color: #ababab;
 }
 
-iframe {
+object {
     grid-area: pdf;
+}
+
+iframe {
+    display: none;
 }
 
 #container {
     display: grid;
     grid-template-areas: 'pdf' 'back';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 @media screen and (orientation: portrait) {
@@ -35,11 +35,15 @@ iframe {
 
     #container {
         row-gap: 5vw;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 
-    iframe {
-        width: 80vw;
-        height: 80vw;
+    img {
+        max-width: 90vw;
+        height: auto;
     }
 }
 
@@ -52,8 +56,9 @@ iframe {
         row-gap: 2vw;
     }
 
-    iframe {
-        width: 50vw;
-        height: 30vw;
+    img {
+        max-width: 50vw;
+        height: auto;
+        margin: auto;
     }
 }
