--- a/Recruiter/mobileCSS.css
+++ b/Recruiter/mobileCSS.css
@@ -188,10 +188,20 @@ footer {
 }
 
 #goToGithub {
+    display: block;
     max-width: max-content;
     max-height: max-content;
     background-color: white;
     border-radius: 10%;
+    margin: 0 auto;
+}
+
+#toGitText {
+    display: block;
+    width: max-content;
+    background-color: #fdf4dd;
+    border: 1px solid #fdf4dd;
+    margin: 0 auto;
 }
 
 #hideTicTacToe {
@@ -297,6 +307,10 @@ footer {
         max-width: 5vw;
     }
 
+    #toGitText {
+        font-size: 3.5vw;
+    }
+
     #hideTicTacToe {
         width: 40%;
         margin: 7% auto 1% auto;
@@ -398,6 +412,10 @@ footer {
 
     #github {
         max-width: 3vw;
+    }
+
+    #toGitText {
+        font-size: 2vw;
     }
 
     #hideTicTacToe {
