--- a/Student/laptopCSS.css
+++ b/Student/laptopCSS.css
@@ -35,9 +35,7 @@ h1 {
 }
 
 h2 {
-    width: max-content;
-    position: absolute;
-    right: 0;
+    max-width: 50vw;
     margin: 0;
     font-size: 1.8vw;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -45,6 +43,26 @@ h2 {
     color: #242424;
     padding: 1.5vw 10vw;
     background-color: #fbbebf;
+}
+
+#container {
+    padding: 1vw;
+}
+
+#letsLearn {
+    max-width: 53vw;
+    background-color: rgb(249, 242, 234);
+    position: relative;
+    left: 45vw;
+}
+
+#sources {
+    max-width: 53vw;
+    background-color: rgb(249, 242, 234);
+}
+
+p {
+    padding: 4vw;
 }
 
 .hola {
