--- a/mainCSS2.css
+++ b/mainCSS2.css
@@ -9,6 +9,8 @@ video {
     max-width: 95vw;
     grid-area: video;
     /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+    outline: 5px solid white;
+    outline-offset: -4px;
 }
 
 h1 {
