--- a/Student/mobileCSS.css
+++ b/Student/mobileCSS.css
@@ -4,18 +4,13 @@ body {
 
 #home {
     position: absolute;
-    left: 0.3vw;
-    top: 0.3vw;
+    left: 0.1vw;
+    top: 0.1vw;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: 100;
-    color: #242424;
-    background-color: rgb(235, 204, 163);
+    font-weight: 200;
+    color: rgb(204, 202, 202);
+    background-color: #000000;
     border: 0;
-}
-
-#home:hover {
-    cursor: pointer;
-    background-color: rgb(215, 185, 145);
 }
 
 h1 {
@@ -27,14 +22,14 @@ h1 {
     font-weight: 400;
     color: #242424;
     background-color: antiquewhite;
-    border: 0.3vw solid rgb(114, 92, 63);
+    border: 0.1vw solid rgb(114, 92, 63);
 }
 
 h2 {
     margin: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 400;
-    color: #4a4a4a;
+    color: #2e2e2e;
     background-color: #fbbebf;
     text-align: center;
 }
@@ -42,6 +37,15 @@ h2 {
 p {
     padding: 5vw;
     text-align: center;
+}
+
+video {
+    max-width: 50vw;
+    outline: 4px solid #5d5c5c;
+    outline-offset: -3px;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, 0);
 }
 
 .hola {
@@ -115,7 +119,7 @@ p {
 @media screen and (orientation: portrait) {
     #home {
         font-size: 4vw;
-        padding: 5.1vw 4vw;
+        padding: 5.15vw 4vw;
     }
 
     h1 {
@@ -124,23 +128,24 @@ p {
     }
 
     h2 {
-        max-width: 90vw;
         font-size: 4.5vw;
-        padding: 1.5vw 1vw;
+        padding: 3vw 1vw;
     }
 
     #container {
-        width: 90vw;
-        position: absolute;
-        left: 50%;
-        transform: translate(-50%, 0);
-        padding: 3.5vw 0vw;
+        max-width: 100vw;
     }
 
     #letsLearn,
+    #projects,
     #sources {
         max-width: 90vw;
         background-color: rgb(249, 242, 234);
+        margin: 3.5vw auto;
+    }
+
+    #sources {
+        border: 0.02vw solid #605f5f;
     }
 
     p {
@@ -167,22 +172,37 @@ p {
 
     #container {
         max-width: 100%;
-        padding: 3vw 0vw;
     }
 
-    #letsLearn {
-        max-width: 53vw;
+    #letsLearn,
+    #projects {
+        max-width: 73vw;
         background-color: rgb(249, 242, 234);
         position: relative;
-        left: 47vw;
+        left: 100%;
+        transform: translate(-100%, 0);
+        margin: 1vw 0;
     }
 
     #sources {
-        max-width: 53vw;
+        max-width: 73vw;
         background-color: rgb(249, 242, 234);
+        border: 0.02vw solid #605f5f;
     }
 
     p {
         font-size: 2vw;
     }
+}
+
+
+.darkBack {
+    background-color: #5d5c5c;
+    padding: 6vw 2vw;
+}
+
+.lightBack {
+    background-image: url('../body_background.jpg');
+    background-size: 70vw;
+    padding: 6vw 2vw;
 }
